day5/ashuweb.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: webpod
  name: webpod
  namespace: ashu
spec:
  containers:
  - image: nginx
    name: webpod
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
