day5/hostpath1.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: emppod
  name: emppod
  namespace: ashu   #  namespace info
spec:
  volumes:   #  this section is to create a kubernetes volume 
  - name: ashuvol1  #  name of volume 
    hostPath:   #  looking  for some data from worker node
     path: /etc   #  Linux host  configuration directory 
     type: Directory   #  this is a directory 
  containers:
  - image: nginx
    name: emppod
    volumeMounts:
    - name: ashuvol1   #  same volume that we created above 
      mountPath:  /usr/share/nginx/html/ashu   #  this mount path will be created automatically in pod 
    ports:
    - containerPort: 80
